--- a/AmandaViagens/AmandaViagens/Views/Cruzeiro/Delete.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Cruzeiro/Delete.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4 col-sm-12 col-xxl-3">
         <div class="form-group">
             <label asp-for="Image" class="form-label"></label>
-            <img src='@Url.Content("~/" + Model.Image)' class="img-fluid w-100">
+            <img src='@Model.Image' class="img-fluid w-100">
         </div>
     </div>
     <div class="col-md-8 col-sm-12 col-xxl-9">
